--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,6 @@
     <title>You da Bomb</title>
   </head>
   <body>
-    <img style="width: 100%; height: 100%" src="./img/praisepupper.png" alt="You da bomb!">
+    <img style="width: 100vh; height: 100%" src="./img/praisepupper.png" alt="You da bomb!">
   </body>
 </html>
